azure/unified-ingress/manifest/hotdrink.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hotdrinks
spec:
  selector:
    matchLabels:
      app: frontend-hotdrinks
  replicas: 2 
  template:
    metadata:
      labels:
        app: frontend-hotdrinks
    spec:
      containers:
      - name: frontend-hotdrinks
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: hotdrinks-80
          containerPort: 80
        - name: hotdrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-hotdrinks
spec:
  clusterIP: None
  ports:
  - name: hotdrinks-80
    port: 80
    targetPort: 80
  - name: hotdrinks-443
    port: 443
    targetPort: 443
  selector:
    app: frontend-hotdrinks

---
