azure/unified-ingress/manifest/vpx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: vpx
spec:
  controller: citrix.com/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vpx
  annotations:
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "172.11.0.5"
   ingress.citrix.com/secure_backend: '{"frontend-hotdrinks": "True"}'
spec:
  ingressClassName: vpx
  tls:
  - secretName: hotdrink-secret
  rules:
  - host:  hotdrink.beverages.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-hotdrinks
            port:
              number: 443
  - host:  colddrink.beverages.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-colddrinks
            port:
              number: 80
